# offimesh

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.vps.yml  docker-compose.yml  main.py  pyproject.toml  render.yml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_01_01_0000-0000_initial_schema.py  2024_01_02_0000-0000_phase3_extensions.py  2024_01_03_0000-0000_subaccounts_notifications.py  2026_07_06_0000-0000_initial.py  2026_07_06_0000-0000_offline_tokens_v2.py
app/: __init__.py  main.py
app/core/: config.py  database.py  exceptions.py  logging.py  redis.py  security.py
app/middleware/: __init__.py  auth.py  correlation_id.py  device_blacklist_middleware.py  rate_limit.py
app/models/: __init__.py  audit.py  base.py  blacklisted_device.py  device.py  device_activity_log.py  fraud_signal.py  idempotency.py  identity_verification.py  ledger_balance.py  ledger_entry.py  nomba_sub_account.py  notification.py  offline_token.py  settlement.py  settlement_claim.py  token.py  transaction.py  user.py  virtual_account.py  webhook.py
app/repositories/: __init__.py  audit_repository.py  device_repository.py  settlement_repository.py  token_repository.py  transaction_repository.py  user_repository.py  virtual_account_repository.py  webhook_repository.py
app/routers/: __init__.py  auth.py  debug.py  devices.py  health.py  identity.py  notifications.py  settlements.py  supabase_auth.py  tokens.py  (+4 more)
docs/: API.md
scripts/: offimesh-api.service  offimesh-celery-beat.service  offimesh-celery-worker.service  sync_schema.py
(+46 files in other folders)
