[project]
name = "nomba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "celery>=5.4.0",
    "cryptography>=44.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "passlib[argon2]>=1.7.4",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.10.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "python-ulid>=2.0.0",
    "redis>=5.2.0",
    "ruff>=0.8.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "structlog>=24.4.0",
    "supabase>=2.10.0",
    "uvicorn[standard]>=0.32.0",
]
